@@ -191,6 +191,10 @@ derived += $(tex4ht_fonts_newtx_derived)
 tex4ht_fonts_newtx_derived = \
 	$(ht_fonts_devdir)/unicode/txbmiaX/ntxbmia.htf
 
+derived += $(tex4ht_fonts_fourier_derived)
+tex4ht_fonts_fourier_derived = \
+	$(ht_fonts_devdir)/unicode/Fourier-Math-Letters/futmi.htf
+
 # xx and many more
 # whither tmp?  how change target dir?  what happened to cmtex.htf?  etc.
 
@@ -398,6 +402,9 @@ $(tex4ht_fonts_libertine_derived): tex4ht-fonts-libertine.tex
 	$(HTTEX) $< ""
 
 $(tex4ht_fonts_newtx_derived): tex4ht-fonts-newtx.tex
+	$(HTTEX) $< ""
+
+$(tex4ht_fonts_fourier_derived): tex4ht-fonts-fourier.tex
 	$(HTTEX) $< ""
 
 # requires more memory than configured in other tex programs.
